feat: tailwind & navbar

--- a/web/pages/landing.templ
+++ b/web/pages/landing.templ
@@ -3,5 +3,5 @@ package pages
 type Landing struct {}
 
 templ (l Landing) View() {
-	<p>Welcome to the landing page </p>
+	<p class="text-primary">Welcome to the landing page </p>
 }
