--- a/web/shared/styles.templ
+++ b/web/shared/styles.templ
@@ -1,13 +1,8 @@
 package shared
 
-
-
-
 func stylesMap() map[templ.CSSClass]struct{} {
-	return map[templ.CSSClass]struct{}{
-    }
+	return map[templ.CSSClass]struct{}{}
 }
-
 
 func Styles() []templ.CSSClass {
 	m := stylesMap()
