--- a/assets/app.css
+++ b/assets/app.css
@@ -563,8 +563,21 @@ video {
   margin-right: 1.25rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .mt-4 {
@@ -591,12 +604,40 @@ video {
   width: 15rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
+.min-w-\[7\.5rem\] {
+  min-width: 7.5rem;
+}
+
+.grow {
+  flex-grow: 1;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
 
 .self-end {
   align-self: flex-end;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .bg-dark {
@@ -609,8 +650,43 @@ video {
   background-color: rgb(134 93 255 / var(--tw-bg-opacity));
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
 .pt-\[50\%\] {
   padding-top: 50%;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-5xl\/tight {
+  font-size: 3rem;
+  line-height: 1.25;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-xl\/tight {
+  font-size: 1.25rem;
+  line-height: 1.25;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .leading-\[5rem\] {
@@ -622,9 +698,24 @@ video {
   color: rgb(21 21 21 / var(--tw-text-opacity));
 }
 
-.text-primary {
+.text-secondary {
   --tw-text-opacity: 1;
-  color: rgb(134 93 255 / var(--tw-text-opacity));
+  color: rgb(227 132 255 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-primary {
+  --tw-shadow-color: #865DFF;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 #siteNav {
@@ -635,7 +726,9 @@ video {
   top: 0;
   left: 0;
   opacity: 0;
-  transition: visibility 0.5s, opacity 0.5s ease-out;
+  transition:
+    visibility 0.5s,
+    opacity 0.5s ease-out;
   overflow-x: hidden;
   padding: 1rem 1.25rem 0 1.25rem;
   visibility: hidden;
@@ -654,7 +747,9 @@ video {
   top: 0;
   right: 0;
   opacity: 0;
-  transition: visibility 0.5s, opacity 0.5s ease-out;
+  transition:
+    visibility 0.5s,
+    opacity 0.5s ease-out;
   overflow-x: hidden;
   padding: 1rem 1.25rem 0 1.25rem;
   visibility: hidden;
