--- a/web/input.css
+++ b/web/input.css
@@ -10,7 +10,9 @@
   top: 0;
   left: 0;
   opacity: 0;
-  transition: visibility 0.5s, opacity 0.5s ease-out;
+  transition:
+    visibility 0.5s,
+    opacity 0.5s ease-out;
   overflow-x: hidden;
   padding: 1rem 1.25rem 0 1.25rem;
   visibility: hidden;
@@ -29,7 +31,9 @@
   top: 0;
   right: 0;
   opacity: 0;
-  transition: visibility 0.5s, opacity 0.5s ease-out;
+  transition:
+    visibility 0.5s,
+    opacity 0.5s ease-out;
   overflow-x: hidden;
   padding: 1rem 1.25rem 0 1.25rem;
   visibility: hidden;
