--- a/web/shared/layout.templ
+++ b/web/shared/layout.templ
@@ -93,7 +93,7 @@ templ (l Layout) head() {
 		<meta property="og:description" content={ l.description }/>
 		<meta property="og:image" content={ l.img }/>
 		<meta property="og:locale" content="en_US"/>
-		<meta property="og:site_name" content="Loggr"/>
+		<meta property="og:site_name" content="Thorttlr"/>
 		<!-- Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
