--- a/web/pages/landing.templ
+++ b/web/pages/landing.templ
@@ -35,9 +35,9 @@ templ limits() {
 
 templ setup() {
 	<section class="flex flex-col items-center mt-4">
-		<p class="text-secondary text-5xl/tight font-bold">Dead simple</p>
-		<p class="text-secondary text-5xl/tight font-bold underline">endpoint</p>
-		<p class="text-secondary text-5xl/tight font-bold underline">setup</p>
+		<p class="text-secondary text-5xl/tight font-bold">Dead <span class="underline">simple</span></p>
+		<p class="text-secondary text-5xl/tight font-bold">endpoint</p>
+		<p class="text-secondary text-5xl/tight font-bold">setup</p>
 		<img class="shadow-md shadow-primary mb-4" src="/assets/setup.png"/>
 		<p class="text-secondary text-xl/tight text-center font-light">Need something simple? </p>
 		<p class="text-secondary text-xl/tight text-center font-light">We got you! </p>
