--- a/web/shared/layout.templ
+++ b/web/shared/layout.templ
@@ -54,7 +54,7 @@ templ (l Layout) View() {
 	<!DOCTYPE html>
 	<html lang="en" itemscope="" itemtype="http://schema.org/Webpage">
 		@l.head()
-		<body class="min-h-screen bg-dark mx-5 my-4">
+		<body class="min-h-screen bg-dark mx-5 my-4 md:mx-[25vw]">
 			@partials.Navbar()
 			@l.content
 		</body>
