--- a/web/partials/nav.templ
+++ b/web/partials/nav.templ
@@ -13,7 +13,9 @@ templ Navbar() {
 			<path d="M4 12l16 0"></path>
 			<path d="M4 18l16 0"></path>
 		</svg>
-		<img src="/assets/logo.webp" alt="logo" class="w-60 h-8 self-end"/>
+		<a href="/" class="text-primary">
+			<img src="/assets/logo.webp" alt="logo" class="w-60 h-8 self-end"/>
+		</a>
 		<svg onclick={ toggleNav("profileNav") } xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#865DFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
 			<path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
