--- a/web/shared/layout.templ
+++ b/web/shared/layout.templ
@@ -74,7 +74,8 @@ templ (l Layout) View() {
 	<!DOCTYPE html>
 	<html lang="en" itemscope="" itemtype="http://schema.org/Webpage">
 		@l.head()
-		<body class="min-h-screen bg-dark mx-5 my-4 md:mx-[25vw] flex flex-col">
+		<body class="min-h-screen bg-dark mx-5 mt-2 mb-4 md:mx-[25vw] flex flex-col">
+			@partials.BetaBanner()
 			@partials.Navbar()
 			@l.content
 		</body>
