--- a/assets/app.css
+++ b/assets/app.css
@@ -604,6 +604,10 @@ video {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -614,6 +618,10 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-56 {
+  width: 14rem;
 }
 
 .w-6 {
@@ -640,6 +648,10 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -654,6 +666,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
 }
 
 .self-end {
@@ -680,6 +696,11 @@ video {
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(134 93 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .bg-yellow-400 {
@@ -715,6 +736,11 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-xl\/tight {
@@ -819,8 +845,25 @@ a {
   text-decoration: underline;
 }
 
+@media (min-width: 640px) {
+  .sm\:mx-\[10vw\] {
+    margin-left: 10vw;
+    margin-right: 10vw;
+  }
+}
+
 @media (min-width: 768px) {
-  .md\:mx-\[25vw\] {
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:mx-\[25vw\] {
     margin-left: 25vw;
     margin-right: 25vw;
   }
