fix: i broke the logo

--- a/web/partials/nav.templ
+++ b/web/partials/nav.templ
@@ -15,7 +15,7 @@ templ Navbar() {
 			<path d="M4 18l16 0"></path>
 		</svg>
 		<a href="/" class="text-primary self-center">
-			<img src="/assets/logo.webp" alt="logo" class="w-60 h-8 self-end"/>
+			<img src="/assets/logo-full.webp" alt="logo" class="w-60 h-8 self-end"/>
 		</a>
 		<svg onclick={ toggleNav("profileNav") } xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle block md:hidden" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#865DFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
