--- a/web/shared/layout.templ
+++ b/web/shared/layout.templ
@@ -133,12 +133,12 @@ templ (l Layout) head() {
 
 templ ga() {
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4MFGB0YFV9"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NDKWSHQXVH"></script>
 	<script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-4MFGB0YFV9');
+      gtag('config', 'G-NDKWSHQXVH');
     </script>
 }
