--- a/web/shared/layout.templ
+++ b/web/shared/layout.templ
@@ -100,6 +100,7 @@ templ (l Layout) head() {
 		<meta name="description" content={ l.description }/>
 		@ga()
 		<script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"></script>
+		<script src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script>
 		<!-- Schema.org (For Google+) -->
 		<meta itemprop="name" content={ l.title }/>
 		<meta itemprop="description" content={ l.description }/>
