docs: point docs url to gitbook

--- a/web/partials/nav.templ
+++ b/web/partials/nav.templ
@@ -46,7 +46,7 @@ templ siteNav() {
 templ siteNavList() {
 	<a href="/" class="block">Home</a>
 	<a href="/about" class="block">About</a>
-	<a href="/docs" class="block">Docs</a>
+	<a href="https://docs.trythrottlr.com" target="_blank" class="block">Docs</a>
 }
 
 templ profileNav() {
